# GodotVillage

./: .clang-format  CMakeLists.txt  Readme.md  clean.sh  compile.sh  run.sh  scriptCMake.sh
data/Atlas/: buildingsAtlas.xml
data/Villages/: Test.village  Test2.village  Test3.village  Test4.village  Test5.village
shaders/: House.fs  House.vs  SkyBox.fs  SkyBox.vs  Terrain.fs  Terrain.vs
src/: Data.cpp  Data.h  GL_Widget.cpp  GL_Widget.h  MainWindow.cpp  MainWindow.h  Renderer.cpp  Renderer.h  UI.cpp  UI.h  main.cpp  mainWindowProjetQT.ui
src/Engine/: BoundingBox2D.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Object3D.h  Ray.h  Scene.cpp  Scene.h
src/Generator/: Building.cpp  Building.h  BuildingsAtlas.cpp  BuildingsAtlas.h  House.cpp  House.h  HousesLayout.cpp  HousesLayout.h  Road.h  RoadsAtlas.h  Scenario.h  Sequence.h  Tree.h  Village.cpp  Village.h  VillageGenerator.cpp  VillageGenerator.h  Wall.h  Watershed.cpp  Watershed.h
src/Generator/Building/: #Floor.h#  Cave.h  Chimney.h  Church.cpp  Church.h  ChurchHouse.h  Door.cpp  Door.h  DoorFacade.h  Facade.cpp  Facade.h  Field.cpp  Field.h  Floor.h  GardenWall.h  HouseBlock.h  HugeSlopeRoof.h  Quad.cpp  Quad.h  QuadFootPrint.cpp  QuadFootPrint.h  Roof.h  Shutter.h  SlopeRoof.h  SpaceFloor.h  SquareRoof.h  Stair.h  StraitSquareRoof.h  Tile.cpp  Tile.h  TileLine.h  TilesRoof.h  Triangg.h  Vine.h  WallE.h  Window.cpp  Window.h  WindowFacade.h
src/Image/: Color.cpp  Color.h  Filter.h  GaussianBlurFilter.h  GradientDXFilter.h  GradientDYFilter.h  Image.cpp  Image.h  Painter.cpp  Painter.h  PainterAlgorithms.cpp  PainterAlgorithms.h
src/Loaders/: ShaderLoader.cpp  ShaderLoader.h
src/Maths/: Calcul.cpp  Calcul.h  DeCasteljau.cpp  DeCasteljau.h  Matrix.h  Matrix.impl  Quaternion.cpp  Quaternion.h  TransformationMatrix.h  TransformationMatrix.impl  Vector.h  Vector.impl
src/PathFinding/: CostFunctor.h  PathFinding.h  PathFinding.impl
src/Renderer/: Shader.cpp  Shader.h  Texture.h  Texture2D.cpp  Texture2D.h  Texture2DArray.cpp  Texture2DArray.h  TextureCubeMap.cpp  TextureCubeMap.h  TextureManager.cpp  TextureManager.h
src/Terrain/: Terrain.cpp  Terrain.h
src/Utils/: Graph.h  Graph.impl  GraphArc.h  GraphNode.h  HashTable.h  Heap.h  ImageLayout.h  ImplicitGridedGraph.h  ImplicitGridedGraph.impl  Iterator.h  Layout.h  LinkedList.h  LinkedList.impl  Pair.h  Table.h
(+10 files in other folders)
